--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/css/section.css",
               "src/styles.css"
             ],
             "scripts": []
